--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@types/react-redux": "^7.1.23",
     "antd": "^4.19.3",
     "axios": "^0.26.1",
+    "chart.js": "^3.7.1",
     "moment": "^2.29.1",
     "react": "^17.0.2",
+    "react-chartjs-2": "^4.0.1",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-scripts": "5.0.0",
@@ -42,5 +44,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "sass": "^1.49.9"
   }
 }
