--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "axios": "^0.26.1",
     "chart.js": "^3.7.1",
     "classnames": "^2.3.1",
+    "i18next": "^21.6.14",
     "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-chartjs-2": "^4.0.1",
     "react-dom": "^17.0.2",
+    "react-i18next": "^11.16.2",
     "react-redux": "^7.2.6",
     "react-scripts": "5.0.0",
     "redux-saga": "^1.1.3",
